--- a/3.k8s/web/deployment.yml
+++ b/3.k8s/web/deployment.yml
@@ -32,3 +32,23 @@ spec:
         - protocol: TCP
           port: 80
           targetPort: 80
+
+---
+apiVersion: gateway.kyma-project.io/v1beta1
+kind: APIRule
+metadata:
+  name: online-store
+  labels:
+    app.kubernetes.io/name: online-store
+spec:
+  service:
+    name: web-app-svc
+    port: 80
+  host: online-store.f976b46.kyma.ondemand.com
+  rules:
+    - path: /.*
+      methods:
+        - GET
+      accessStrategies:
+        - handler: allow
+  gateway: kyma-gateway.kyma-system.svc.cluster.local
