--- a/1.middleware/hello-world/package.json
+++ b/1.middleware/hello-world/package.json
@@ -1,9 +1,5 @@
 {
   "name": "hello-world",
   "version": "1.0.0",
-  "dependencies": {
-    "end-of-stream": "^1.4.4",
-    "from2": "^2.3.0",
-    "lodash": "^4.17.21"
-  }
+  "dependencies": {}
 }
