--- a/3.k8s/product/deployment.yml
+++ b/3.k8s/product/deployment.yml
@@ -44,7 +44,7 @@ spec:
   service:
     name: product-svc
     port: 8080
-  host: productsapi.d5c6411.kyma.ondemand.com
+  host: productsapi.c-93b5b3a.kyma.ondemand.com
   rules:
     - path: (/|$)(.*)
       methods:
