--- a/3.k8s/order/deployment.yml
+++ b/3.k8s/order/deployment.yml
@@ -2,36 +2,36 @@ kind: Deployment
 apiVersion: apps/v1
 # ----------------------
 metadata:
-    name: order
+  name: order
 spec:
-    replicas: 1
-    selector:
-        matchLabels:
-            app: order
-    template:
-        metadata:
-            labels:
-                app: order
-        spec:
-            containers:
-                - name: order
-                  image: mppise/order:1.1.0
-                  ports:
-                      - containerPort: 8080
+  replicas: 1
+  selector:
+    matchLabels:
+      app: order
+  template:
+    metadata:
+      labels:
+        app: order
+    spec:
+      containers:
+        - name: order
+          image: mppise/order:1.1.0
+          ports:
+            - containerPort: 8080
 
 ---
 kind: Service
 apiVersion: v1
 # -------------------
 metadata:
-    name: order-svc
+  name: order-svc
 spec:
-    selector:
-        app: order
-    ports:
-        - protocol: TCP
-          port: 8080
-          targetPort: 8080
+  selector:
+    app: order
+  ports:
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
 
 ---
 apiVersion: gateway.kyma-project.io/v1beta1
@@ -44,7 +44,7 @@ spec:
   service:
     name: order-svc
     port: 8080
-  host: ordersapi.d5c6411.kyma.ondemand.com
+  host: ordersapi.c-93b5b3a.kyma.ondemand.com
   rules:
     - path: (/|$)(.*)
       methods:
