--- a/3.k8s/ping/deployment.yml
+++ b/3.k8s/ping/deployment.yml
@@ -17,7 +17,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ping
 spec:
-  runtime: nodejs14
+  runtime: "nodejs14"
   source:
     gitRepository:
       url: "https://github.com/mppise/full-stack-microservices.git"
