--- a/1.middleware/ping/package.json
+++ b/1.middleware/ping/package.json
@@ -1,5 +1,8 @@
 {
   "name": "hello-world",
   "version": "1.0.0",
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^1.2.2",
+    "node-jose": "^2.1.1"
+  }
 }
